# tree-sitter-orgncf

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  comment-example.ncf  go.mod  grammar.js  justfile  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-orgncf.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_orgncf/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOrgncf/: orgncf.h
bindings/swift/TreeSitterOrgncfTests/: TreeSitterOrgncfTests.swift
queries/: highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
