[package]
name = "tree-sitter-orgncf"
description = "Describes into a single file how lan items should be added to DNS and DHCP"
version = "0.1.0"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
license = "AGPL3"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "orgncf"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ovidiu-ionescu/tree-sitter-orgncf"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
